cleaned up movie rating routes and added login/logout links to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,16 @@
 </head>
 
 <body>
-  Ratings
+  <h4>
+    <a href="/">Ratings</a>
+    <span class="logout" style="float:right">
+        {%if "id" not in session %}
+            <a href="/login">Login</a>
+        {% else %}
+            <a href="/logout">Logout</a>
+        {% endif%}
+    </span>
+  </h4>
   <hr>
 
   {% with messages = get_flashed_messages() %}
